--- a/src/sass/utilities/_index.scss
+++ b/src/sass/utilities/_index.scss
@@ -1,3 +1,6 @@
 @forward 'colors';
 @forward 'font-sizes';
-@forward 'sizes';
+@forward 'flow';
+@forward 'spacing';
+@forward 'container';
+@forward 'font-weights';
