updated starter template adding utility classes, components, and  updated pre-styling code.

--- a/src/sass/abstracts/_sizes.scss
+++ b/src/sass/abstracts/_sizes.scss
@@ -3,6 +3,22 @@ $sizes: (
     12: 0.75rem,
     16: 1rem,
     20: 1.25rem,
+    24: 1.5rem,
+    30: 1.875rem,
     32: 2rem,
     36: 2.25rem,
+    40: 2.5rem,
+    48: 3rem,
 );
+
+$hero-padding: clamp(15rem, 15vh, 20rem);
+$section-padding: clamp(3rem, 10vh, 7rem);
+
+$container-inline-padding: 1rem;
+$container-max-width: 60rem;
+$container-max-width-wide: 75rem;
+
+$card-body-padding: clamp(2rem, 3.5rem, 5rem);
+
+$grid-gap: 1.5rem;
+$flex-group-gap: 1rem;
