--- a/src/sass/utilities/_index.scss
+++ b/src/sass/utilities/_index.scss
@@ -1,6 +1,11 @@
+@forward 'box-shadow';
 @forward 'colors';
+@forward 'flex-group';
+@forward 'font-families';
 @forward 'font-sizes';
 @forward 'flow';
 @forward 'spacing';
 @forward 'container';
 @forward 'font-weights';
+@forward 'text-center';
+@forward 'uppercase';
