--- a/src/sass/utilities/_container.scss
+++ b/src/sass/utilities/_container.scss
@@ -1,4 +1,18 @@
+@use '../abstracts' as *;
+
 .container {
-    width: min(100% - 2rem, 60rem);
+    --max-width: #{$container-max-width};
+    --padding: #{$container-inline-padding};
+
+    // --padding: #{$container-inline-padding} * 2;
+    // --max-width: #{$container-max-width};
+    // --padding: size(16);
+
+    // width: min(var(--max-width), 100% - (var(--padding) * 2));
+    width: min(100% - var(--padding), var(--max-width));
     margin-inline: auto;
+}
+
+.container[data-type="wide"] {
+    --max-width: #{$container-max-width-wide};
 }
