--- a/src/sass/utilities/_font-sizes.scss
+++ b/src/sass/utilities/_font-sizes.scss
@@ -3,5 +3,10 @@
 @each $size-name, $size-value in $font-sizes {
     .fs-#{$size-name} {
         font-size: $size-value;
+
+        @if $size-name >600 {
+            line-height: 1.1;
+        }
+
     }
 }
